# beardgit_gh_tests

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: cli.rs  lib.rs  main.rs  recurrence.rs  store.rs  task.rs  tui.rs
tests/: basic.rs
