[package]
name = "tasklog"
version = "0.3.0"
edition = "2021"
authors = ["Adolfo Fuentes <adolfo_fuentes@outlook.com>"]
description = "A tiny terminal task tracker that stays out of your way."
license = "MIT"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "tasklog"
path = "src/main.rs"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
